--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "main": "src/index.js",
   "dependencies": {
     "@blueprintjs/core": "^3.52.0",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
     "~": "file:blueprintjs/icons/lib/css/blueprint-icons.css",
     "gh-pages": "^3.2.3",
     "node-sass": "^6.0.1",
