--- a/package.json
+++ b/package.json
@@ -11,16 +11,21 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "~": "file:blueprintjs/icons/lib/css/blueprint-icons.css",
+    "base-64": "^1.0.0",
     "gh-pages": "^3.2.3",
+    "jsonwebtoken": "^8.5.1",
     "node-sass": "^6.0.1",
     "react": "17.0.2",
     "react-bootstrap": "^1.6.1",
+    "react-cookies": "^0.1.1",
     "react-dom": "17.0.2",
     "react-if": "^4.0.1",
     "react-paginate": "^8.1.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
-    "uuid": "^8.3.2"
+    "superagent": "^6.1.0",
+    "uuid": "^8.3.2",
+    "wepback": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
